--- a/spectra-install.html
+++ b/spectra-install.html
@@ -49,28 +49,28 @@
     <div class="row g-4">
       <div class="col-md-6">
         <div class="card p-3">
-          <h5 class="card-title">下載 Spectra Client</h5>
+          <h5 class="card-title">1. 下載 Spectra Client</h5>
           <p>前往 <a href="https://valospectra.com/download" target="_blank">官方下載頁面</a>，取得安裝檔並完成安裝。</p>
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="card p-3">
-          <h5 class="card-title">啟動 Spectra Client</h5>
+          <h5 class="card-title">2. 啟動 Spectra Client</h5>
           <p>安裝後先啟動 Spectra Client，並確認連接伺服器與 Riot ID 正確。</p>
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="card p-3">
-          <h5 class="card-title">開啟《特戰英豪》</h5>
+          <h5 class="card-title">3. 開啟《特戰英豪》</h5>
           <p>請先啟動 Spectra Client，再開啟《特戰英豪》，以避免發生錯誤。</p>
         </div>
       </div>
 
       <div class="col-md-6">
         <div class="card p-3">
-          <h5 class="card-title">確認開啟順序</h5>
+          <h5 class="card-title">4. 確認開啟順序</h5>
           <p>請確認 Spectra Client 啟動後，才開啟遊戲，並再次檢查 Riot ID 是否正確。</p>
         </div>
       </div>
