--- a/spectra-install.html
+++ b/spectra-install.html
@@ -41,7 +41,7 @@
 <body>
   <header class="header">
     <img src="VBL2025Summer_Logo.png" alt="VBL 2025 Summer Logo" class="logo">
-    <h1>>Spectra Client 安裝與設置教學</h1>
+    <h1>Spectra Client 安裝與設置教學</h1>
     <p class="lead">Spectra Client Installation and Setup Tutorial</p>
   </header>
 
