--- a/group-stage-standings.html
+++ b/group-stage-standings.html
@@ -48,13 +48,13 @@
     }
 
     .iframe-inner {
-      width: 150%;
+      width: 95vw; /* 可改為固定寬度如 1000px */
+      max-width: 1200px;
       height: 600px;
       border: none;
       border-radius: 12px;
       background-color: rgba(0, 0, 0, 0.3);
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);
-      transition: transform 0.2s ease;
     }
 
     .iframe-inner:hover {
