--- a/group-stage-standings.html
+++ b/group-stage-standings.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="Icon_ALL.png" type="image/png" />
   <title>VBL 2025 Summer 積分概況</title>
   <style>
     * {
