--- a/spectra-install.html
+++ b/spectra-install.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VBL 2025 Summer丨Spectra Client 安裝指南</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" href="Icon_ALL.png" type="image/png" />
   <style>
     body {
       background: url('VBL2025Summer_BG.png') no-repeat center center fixed;
