--- a/group-stage-standings.html
+++ b/group-stage-standings.html
@@ -13,7 +13,7 @@
     }
 
     body {
-      background-image: url('Site_BG.png');
+      background-image: url('VBL2025Summer_BG.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
