--- a/spectra-install.html
+++ b/spectra-install.html
@@ -117,19 +117,19 @@
 <body>
   <header>
     <img src="VBL2025Summer_Logo.png" alt="VBL 2025 Logo" />
-    <h1>Spectra Client 使用注意事項</h1>
+    <h1>Spectra Client 使用注意事項及手冊</h1>
   </header>
 
   <main>
     <div class="note-box">
-      <p><strong>Spectra Client</strong> 是一款協助主播與賽評即時顯示 VALORANT 戰局資訊的 Overlay 工具。</p>
+      <p><strong>Spectra Client</strong> 是一款協助轉播團隊即時顯示《特戰英豪》戰局資訊的 Overlay 工具。</p>
 
       <p>請務必注意以下幾點以確保順利使用：</p>
 
       <ul>
         <li>僅支援 Windows 平台，請勿在 macOS / Linux 使用。</li>
-        <li>啟動 Spectra Client 前請先開啟 VALORANT 並完成登入。</li>
-        <li>如遇無法連線、未顯示資料等狀況，請重新啟動程式並確認網路連線穩定。</li>
+        <li>請先啟動 Spectra Client，再開啟《特戰英豪》並完成登入。</li>
+        <li>如遇無法連線、未顯示資料等狀況，請重新啟動程式及遊戲，並確認網路連線穩定。</li>
         <li>請勿重命名主程式檔案，否則可能導致無法更新或錯誤。</li>
         <li>程式不會儲存任何帳號密碼資訊，請安心使用。</li>
       </ul>
